--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -14,7 +14,7 @@
         android:contentDescription="@string/rajawali_air_logo" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/tv_skip"
+        android:id="@+id/btn_skip"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:background="@android:color/transparent"
