creating home page

--- a/app/src/main/res/layout/fragment_onboarding.xml
+++ b/app/src/main/res/layout/fragment_onboarding.xml
@@ -15,7 +15,7 @@
 
     <include
         android:id="@+id/include_toolbar"
-        layout="@layout/toolbar"
+        layout="@layout/toolbar_onboarding"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
