--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="transparent">#00FFFFFF</color>
     <color name="main_color">#1e90ff</color>
     <color name="secondary_color">#0f53b7</color>
+    <color name="grey_text">#505050</color>
+    <color name="hint_text">#646464</color>
 </resources>
