fixing string in home page

--- a/core/src/main/res/layout/item_card_promotion.xml
+++ b/core/src/main/res/layout/item_card_promotion.xml
@@ -36,6 +36,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto_bold"
+                android:maxLines="1"
                 android:text="@string/tv_promotion_label"
                 android:textColor="@color/white"
                 android:textSize="20sp"
@@ -46,6 +47,8 @@
                 android:id="@+id/tv_destination_route"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:maxEms="16"
                 android:text="@string/tv_promotion_description"
                 android:textColor="@color/grey"
                 app:layout_constraintStart_toStartOf="parent"
@@ -66,6 +69,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto_bold"
+                android:maxLines="1"
                 android:text="@string/tv_promotion_price_value"
                 android:textColor="@color/main_color"
                 android:textSize="20sp"
