--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -132,6 +132,8 @@
                             android:layout_marginTop="8dp"
                             android:fontFamily="@font/roboto_medium"
                             android:text="@string/tv_yogyakarta_airport_code"
+                            android:maxLines="1"
+                            android:maxEms="6"
                             android:textColor="@color/white"
                             android:textSize="16sp"
                             app:layout_constraintStart_toStartOf="parent"
@@ -142,7 +144,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
+                            android:maxEms="8"
+                            android:maxLines="2"
                             android:text="@string/tv_yogyakarta_city"
+                            android:textSize="12sp"
                             android:textColor="@color/white"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/tv_departure_city_code_label" />
@@ -197,6 +202,9 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
                             android:fontFamily="@font/roboto_medium"
+                            android:textAlignment="textEnd"
+                            android:maxLines="1"
+                            android:maxEms="6"
                             android:text="@string/tv_balikpapan_airport_code"
                             android:textColor="@color/white"
                             android:textSize="16sp"
@@ -208,8 +216,12 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
+                            android:maxEms="8"
+                            android:maxLines="2"
                             android:text="@string/tv_balikpapan_city"
+                            android:textAlignment="textEnd"
                             android:textColor="@color/white"
+                            android:textSize="12sp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/tv_arrive_city_code_label" />
 
