--- a/core/src/main/res/layout/item_tourist_destination.xml
+++ b/core/src/main/res/layout/item_tourist_destination.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="8dp"
     android:layout_marginEnd="8dp"
-    android:layout_marginBottom="12dp">
+    android:layout_marginBottom="12dp"
+    app:cardCornerRadius="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -24,9 +24,9 @@
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:padding="12dp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:padding="12dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/iv_background">
@@ -36,6 +36,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto_bold"
+                android:maxLines="1"
                 android:text="@string/tv_jakarta"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -46,7 +47,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:fontFamily="@font/roboto_medium"
+                android:maxLines="1"
                 android:text="@string/tv_semarang_to_jakarta_route"
+                android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_destination_label" />
 
@@ -56,6 +59,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:fontFamily="@font/roboto_bold"
+                android:maxLines="1"
                 android:text="@string/tv_semarang_to_jakarta_route_price"
                 android:textColor="@color/main_color"
                 app:layout_constraintStart_toStartOf="parent"
