--- a/app/src/main/res/menu/menu_home_page.xml
+++ b/app/src/main/res/menu/menu_home_page.xml
@@ -4,21 +4,21 @@
     <item
         android:id="@+id/home"
         android:title="@string/item_home"
-        android:icon="@drawable/ic_home"
+        android:icon="@drawable/menu_icon_home_selector"
     />
     <item
         android:id="@+id/bookings"
         android:title="@string/item_bookings"
-        android:icon="@drawable/ic_book"
+        android:icon="@drawable/menu_icon_booking_selector"
         />
     <item
         android:id="@+id/history"
         android:title="@string/item_History"
-        android:icon="@drawable/ic_clock"
+        android:icon="@drawable/menu_icon_history_selector"
         />
     <item
         android:id="@+id/account"
         android:title="@string/item_account"
-        android:icon="@drawable/ic_account"
+        android:icon="@drawable/menu_icon_account_selector"
         />
 </menu>
