--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="white">#FFFFFFFF</color>
     <color name="transparent">#00FFFFFF</color>
     <color name="grey">#C2C2C2</color>
+    <color name="neutral">#757575</color>
+    <color name="et_select_city_background">#EDEDED</color>
     <color name="home_page_background">#f9f9f9</color>
     <color name="young_grey">#F9F9F9</color>
     <color name="main_color">#1e90ff</color>
