--- a/core/src/main/res/layout/item_card_promotion.xml
+++ b/core/src/main/res/layout/item_card_promotion.xml
@@ -16,7 +16,7 @@
 
         <ImageView
             android:id="@+id/iv_background"
-            android:layout_width="360dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:contentDescription="@string/app_name"
             android:scaleType="centerCrop"
