--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,19 +1,17 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Base.Theme.RajawaliAir" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Theme.RajawaliAir" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
 <!--         <item name="colorPrimary">@color/my_light_primary</item> -->
         <!--    status bar    -->
-        <item name="android:statusBarColor">@color/white</item>
-        <item name="android:windowLightStatusBar">true</item>
+        <item name="android:statusBarColor">@color/main_color</item>
+        <item name="android:windowLightStatusBar">false</item>
         <!--    font    -->
         <item name="android:fontFamily">@font/roboto</item>
         <!--    app background    -->
         <item name="android:windowBackground">@color/white</item>
 
     </style>
-
-    <style name="Theme.RajawaliAir" parent="Base.Theme.RajawaliAir" />
 
     <style name="Widget"/>
     <style name="Widget.BottomNavigationView"/>
@@ -34,6 +32,10 @@
     <item name="marginHorizontal">@dimen/m3_bottom_nav_item_active_indicator_margin_horizontal</item>
     <item name="shapeAppearance">@style/ShapeAppearance.Material3.NavigationBarView.ActiveIndicator</item>
     <item name="android:color">@color/secondary_color</item>
+    </style>
+
+    <style name="MainColorWindowBackground" parent="Base.Theme.RajawaliAir">
+        <item name="android:windowLightStatusBar">false</item>
     </style>
 
 </resources>
