update fragment onewaytrip and fragment multycity

--- a/app/src/main/res/layout/fragment_multi_city.xml
+++ b/app/src/main/res/layout/fragment_multi_city.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         app:layout_constraintTop_toTopOf="parent"
@@ -14,6 +15,27 @@
         <include layout="@layout/multi_city_form"/>
         <include layout="@layout/button_add_another_flight"/>
         <include layout="@layout/passenger_and_cabin_card"/>
+        <TextView
+            android:id="@+id/tv_tourist_destination_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
+            android:fontFamily="@font/roboto_bold"
+            android:text="@string/tv_tourist_destination_label"
+            android:textSize="20sp" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_tourist_destination"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:orientation="horizontal"
+            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:itemCount="5"
+            tools:listitem="@layout/item_tourist_destination" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
