--- a/app/src/main/res/layout/multi_city_form.xml
+++ b/app/src/main/res/layout/multi_city_form.xml
@@ -169,6 +169,7 @@
             </LinearLayout>
 
             <TextView
+                android:id="@+id/btn_remove"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto_bold"
