--- a/app/src/main/res/layout/fragment_multi_city.xml
+++ b/app/src/main/res/layout/fragment_multi_city.xml
@@ -1,19 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <LinearLayout
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <include layout="@layout/multi_city_form"/>
-        <include layout="@layout/button_add_another_flight"/>
-        <include layout="@layout/passenger_and_cabin_card"/>
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <include layout="@layout/multi_city_form" />
+
+        <include
+            android:id="@+id/btn_add_flight"
+            layout="@layout/button_add_another_flight" />
+
+        <include layout="@layout/passenger_and_cabin_card" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
